[tool.poetry]
name = "orchard"
version = "0.1.0"
description = ""
authors = ["auburn <auburnete@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.3.0"
base58 = "^2.1.1"
python-slugify = {extras = ["unidecode"], version = "6.0.1"}
sqlite-utils = "^3.24"
python-dotenv = "^0.19.2"
b2sdk = "^1.14.0"
requests = "^2.27.1"
uvicorn = "^0.19.0"
starlette = "^0.18.0"
httpx = "^0.23.0"
cryptography = "^36.0.2"
PyYAML = "^6.0"
toml = "^0.10.2"
peewee = "^3.15.1"
Unidecode = "1.3.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.2"
syrupy = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.19.0"
pytest-httpx = "^0.21.2"
pytest-random-order = "^1.0.4"
debugpy = "^1.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
